Update to Gradle 9.2.1 and Java 25 (#201)
* Update to Gradle 9.2.1 and Java 25

* Use new Java features